--- a/src/LayoutPage/Header/Header.module.scss
+++ b/src/LayoutPage/Header/Header.module.scss
@@ -6,7 +6,7 @@
   height: 72px;
   width: 100%;
   background-color: #fff;
-  // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .header_items {
