--- a/src/content/AdvertsPage/components/Pagination/components/AdvertItem/AdvertItem.module.scss
+++ b/src/content/AdvertsPage/components/Pagination/components/AdvertItem/AdvertItem.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 80px;
   margin-top: 8px;
-
+  border: 1px solid rgba(0, 0, 0, 0);
   background-color: #fff;
 
   &:hover {
