--- a/src/content/AdvertsPage/components/Pagination/components/SearchBar/SearchBar.module.scss
+++ b/src/content/AdvertsPage/components/Pagination/components/SearchBar/SearchBar.module.scss
@@ -1,14 +1,10 @@
 .wrapper {
   display: flex;
   align-items: center;
+  position: relative;
   width: 420px;
   height: 40px;
   background: #ffffff;
-}
-
-.searchbar {
-  width: 100%;
-  height: 100%;
 }
 
 .input {
@@ -18,20 +14,16 @@
 
   text-indent: 10px;
   font-size: 14px;
+
+  &:focus + .search_button {
+    display: none;
+  }
 }
 
 .search_button {
-  //   position: relative;
-  //   right: 56px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 56px;
-  height: 100%;
-
-  cursor: pointer;
+  position: absolute;
+  top: 20%;
+  right: 3%;
 
   & svg {
     opacity: 0.5;
